# HLopensource_bots

./: .env.example  .gitignore  CLAUDE.md  HLopen_source_bots.md  pyproject.toml  requirements.txt
configs/: hip3-mainnet-xyz.yaml  hip3-mainnet.yaml  hip3-testnet-btc.yaml  hip3-testnet-sol-stop.yaml  hip3-testnet-sol.yaml  hip3-testnet.yaml
docs/: catalog.md  coin-selection-analysis.md  custom-bot-design-notes.md  hip3-mainnet.yaml.template  hip3-soak-verdict.md  lessons.md  m3-results.md  market-survey-verdict.md  phase5-synthesis.md  roadmap.md  rubric.md  runbook.md  security-framework.md  strategy-pivot-plan.md  testing-workflow.md  todo.md
evaluations/: tier2-comparative-analysis.md
evaluations/_template/: evaluation.md
evaluations/avellaneda-mm-freqtrade/: evaluation.md  secret-scan-initial.json  secret-scan.json
evaluations/chainstack-grid-bot/: build-notes.md  evaluation.md  secret-scan-initial.json  security-audit.md  testnet-config.yaml  testnet-results.md
evaluations/copy-trader/: evaluation.md  secret-scan-initial.json  security-audit.md
evaluations/copy-trading-bot/: dependency-audit.json  evaluation.md  (+1 more)
osbot/: __init__.py  __main__.py  main.py  roundtrip.py  runner.py  startup.py
sandbox/: Dockerfile.hummingbot  Dockerfile.node  Dockerfile.passivbot  Dockerfile.python  Dockerfile.rust  docker-compose.yml
tests/: conftest.py
tools/: audit_deps.py  check_testnet.py  clone_bot.sh  coin_watch.py  funding_pnl.py  market_survey.py  scan_secrets.py  seed_hummingbot_conf.py  shadow_analyze.py  shadow_collector.py  sol_soak_watch.py
(+676 files in other folders)
