[project]
name = "osbot"
version = "0.0.0"
description = "Custom Hyperliquid trading bot"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "PL", "SIM", "RUF"]
ignore = ["PLR0913"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["osbot"]
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["vcr.*", "yaml.*", "hyperliquid.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_classes = ["Test*Case"]
